--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-REACT_APP_URL=http://3.83.96.16:8000/
+<!-- REACT_APP_URL=http://3.83.96.16:8000/ -->
+
+REACT_APP_URL=https://e15a-223-233-70-178.in.ngrok.io/
+
+
