--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
+    "referral-code-generator": "^1.0.8",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
