--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.1.1",
     "react-web-share": "^2.0.2",
     "redux-persist": "^6.0.0",
