--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
+    "@rainbow-me/rainbowkit": "^0.8.0",
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "ethers": "^5.7.2",
     "mdb-react-ui-kit": "^5.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -27,6 +29,7 @@
     "redux-persist": "^6.0.0",
     "referral-code-generator": "^1.0.8",
     "slick-carousel": "^1.8.1",
+    "wagmi": "^0.8.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
