--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.0.6",
     "axios": "^1.1.3",
+    "crypto-js": "^4.1.1",
     "ethers": "^5.7.2",
     "mdb-react-ui-kit": "^5.0.0",
     "moment": "^2.29.4",
