--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-stripe-checkout": "^2.6.3",
