--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
  REACT_APP_URL=http://3.83.96.16:8000/
 
+ REACT_APP_API_KEY="base64:4b3rg5+0Mjda+g31DqOppAbrc1KGUChRNT+towokhE0="
+
 # REACT_APP_URL=https://e15a-223-233-70-178.in.ngrok.io/
 
 # REACT_APP_URL=https://f917-223-233-65-191.in.ngrok.io/
