--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
- REACT_APP_URL=http://3.83.96.16:8000/
+#  REACT_APP_URL=http://3.83.96.16:8000/
 
  REACT_APP_API_KEY="base64:4b3rg5+0Mjda+g31DqOppAbrc1KGUChRNT+towokhE0="
 
@@ -7,3 +7,4 @@
 # REACT_APP_URL=https://f917-223-233-65-191.in.ngrok.io/
 
 # REACT_APP_URL=https://a018-223-233-72-84.in.ngrok.io/
+REACT_APP_URL=https://92d6-2401-4900-1c5c-7d77-f8be-4a77-1693-2b53.in.ngrok.io/
