--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
- REACT_APP_URL=http://3.83.96.16:8000/
+ REACT_APP_URL=http://bindassdeal.in/
 
  REACT_APP_API_KEY="base64:4b3rg5+0Mjda+g31DqOppAbrc1KGUChRNT+towokhE0="
 
