--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React App",
-  "name": "Gas guzzlrs app",
+  "name": "GasGuzzlrs app",
   "icons": [
     {
       "src": "favicon.ico",
