--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.0.6",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "crypto-js": "^4.1.1",
     "ethers": "^5.7.2",
     "mdb-react-ui-kit": "^5.0.0",
