--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mdb-react-ui-kit": "^5.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.6.8",
     "react-bootstrap": "^2.6.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
