--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-navigation-prompt": "^1.9.6",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-stripe-checkout": "^2.6.3",
