--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "crypto-js": "^4.1.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "emoji-picker-react": "^4.4.8",
     "ethers": "^5.7.2",
     "force": "^0.0.3",
     "html-react-parser": "^3.0.9",
