--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "ethers": "^5.7.2",
     "force": "^0.0.3",
     "html-react-parser": "^3.0.9",
+    "i": "^0.3.7",
     "mdb-react-ui-kit": "^5.0.0",
     "moment": "^2.29.4",
+    "npm": "^9.6.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.8",
     "react-bootstrap": "^2.6.0",
@@ -34,6 +36,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-player": "^2.12.0",
+    "react-pro-sidebar": "^0.6.0",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-navigation-prompt": "^1.9.6",
