profile pic update

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "npm": "^9.6.4",
     "rc-tabs": "^12.5.10",
     "react": "^18.2.0",
+    "react-avatar-edit": "^1.2.0",
     "react-big-calendar": "^1.6.8",
     "react-bootstrap": "^2.6.0",
     "react-chartjs-2": "^5.2.0",
